Support graphql-transport-ws functionality on top of apollo 49.1

--- a/Configuration/Shared/Workspace-Release.xcconfig
+++ b/Configuration/Shared/Workspace-Release.xcconfig
@@ -16,6 +16,7 @@ SWIFT_COMPILATION_MODE = wholemodule
 LLVM_LTO = YES
 
 // Build Options
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 
 ENABLE_NS_ASSERTIONS = NO
